updated a lot of pages

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -9,7 +9,8 @@
   <meta name="author" content="Ruixiang Du">
 
   
-  <meta name="description" content="DARPA Robotics Challenge(DRC) Finals: Team WPI-CMU, WPI 07/2014-Present To be added&hellip; Robotic System for Use of Fall Risk Assessment in Home &hellip;">
+  <meta name="description" content="EDUCATION | TECHNICAL SKILLS | RESEARCH&amp;TEACHING
+PROJECTS | HONORS | ACTIVITIES See the PDF version EDUCATION Worcester Polytechnic Institute ( &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -18,7 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://rxdu.me/projects">
+  <link rel="canonical" href="http://rdu.im/projects">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Ruixiang Du" type="application/atom+xml">
@@ -63,15 +64,16 @@
   
 <form action="http://google.com/search" method="get">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:rxdu.me" />
+    <input type="hidden" name="q" value="site:rdu.im" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
   
 <ul class="main-navigation">
   <li><a href="/">About Me</a></li>
+  <li><a href="/resume">Resume</a></li>  
   <li><a href="/research">Research</a></li>
-  <li><a href="/projects">Projects</a></li>  
+  <li><a href="/devel">Devel Zone</a></li>
   <li><a href="/blog">Tech Notes</a></li>
   <li><a href="/category-list">Categories</a></li>  
 </ul>
@@ -82,14 +84,82 @@
       <div>
 <article role="article">
   
-  <h2>DARPA Robotics Challenge(DRC) Finals: Team WPI-CMU, WPI 07/2014-Present</h2>
+  <p><a name="TOP"></a></p>
+
+<p><a href="#EDUCATION">EDUCATION</a> | <a href="#SKILLS">TECHNICAL SKILLS</a> | <a href="#RATA">RESEARCH&amp;TEACHING</a><br/>
+<a href="#PROJECTS">PROJECTS</a> | <a href="#HONORS">HONORS</a> | <a href="#ACTIVITIES">ACTIVITIES</a></p>
+
+<p><a href="/resume.pdf">See the PDF version</a></p>
+
+<p><a name="EDUCATION"></a></p>
+
+<h2>EDUCATION</h2>
+
+<p><strong>Worcester Polytechnic Institute (WPI), Worcester, MA USA</strong></p>
 
 <ul>
-<li>To be added&hellip;</li>
+<li>Doctor of Philosophy in Robotics Engineering, GPA: 3.89 &ndash; 08/2013 to Present</li>
+<li>Master of Science in Robotics Engineering, GPA: 3.83/4 &ndash; 06/2013</li>
 </ul>
 
 
-<h2>Robotic System for Use of Fall Risk Assessment in Home Environment, WPI 07/2013-05/2014</h2>
+<p><strong>North China Electric Power University (NCEPU), China</strong></p>
+
+<ul>
+<li>Bachelor of Engineering in Automation, GPA: 87.9/100 &ndash; 07/2011</li>
+</ul>
+
+
+<p><a name="SKILLS"></a></p>
+
+<h2>TECHNICAL SKILLS</h2>
+
+<ul>
+<li><strong>Software</strong>: Matlab, Eclipse, Git</li>
+<li><strong>Programming</strong>: C/C++, Robot Operating System (ROS), OpenCV, PCL, wxWidgets, Qt</li>
+<li><strong>Microcontroller</strong>: Freescale S12/S12X, AVR, STM32F, ARM7</li>
+</ul>
+
+
+<p>I&rsquo;m familiar with development in both Windows and Linux. A lot of my project development work is done in Ubuntu with C++ and ROS. I&rsquo;m comfortable with using open-source tools to do embedded development, such as Eclipse and GNU Toolschains. I use Git a lot to manage both my personal projects and projects collaborating with others.</p>
+
+<p><a name="RATA"></a></p>
+
+<h2>RESEARCH &amp; TEACHING EXPERIENCE</h2>
+
+<p><strong>Research Assistant, Worcester Polytechnic Institute</strong></p>
+
+<ul>
+<li><a href="http://robot.wpi.edu/">RIVeR Lab</a>, Professor Taskin Padir , 10/2014-Present</li>
+</ul>
+
+
+<p><strong>Teaching Assistant, Worcester Polytechnic Institute</strong></p>
+
+<ul>
+<li>ECE2010, Introduction to ECE, Professor William Michalson, 2014 Fall A term</li>
+<li>ECE549/RBE502, Robot Control, Professor Taskin Padir, 2014 Spring</li>
+<li>ECE3503, Power Electronics, Professor Alexander E. Emanuel, 2013 Fall B term</li>
+<li>ECE2010, Introduction to ECE, Professor James P. O’Rourke, 2013 Fall A term</li>
+</ul>
+
+
+<h1><div style="text-align:right;line-height:3px;"><font size="3"><a href="#TOP">Back To Top</a></font></div></h1>
+
+<p><a name="PROJECTS"></a></p>
+
+<h2>PROJECTS</h2>
+
+<h4>DARPA Robotics Challenge(DRC) Finals: Team WPI-CMU, WPI 07/2014-Present</h4>
+
+<ul>
+<li>Worked on drill task to control the Boston Dynamics Atlas Robot to drill a hole on the wall</li>
+<li>Working on a whole-body manipulation controller to enable the robot to perform varies of tasks as
+well as keep balance</li>
+</ul>
+
+
+<h4>Robotic System for Use of Fall Risk Assessment in Home Environment, WPI 07/2013-05/2014</h4>
 
 <ul>
 <li>Worked out a robotic framework for home fall risk assessment</li>
@@ -101,7 +171,7 @@
 <p><img src="/images/projects/fall_risk_turtle.jpg" width="280">
 <img src="/images/projects/web_interface.png" width="465"></p>
 
-<h2>DARPA Robotics Challenge(DRC) Trials: Team WRECS, WPI 09/2013-12/2013</h2>
+<h4>DARPA Robotics Challenge(DRC) Trials: Team WRECS, WPI 09/2013-12/2013</h4>
 
 <ul>
 <li>Worked on door task in the aspects of manipulation and door detection with point clouds</li>
@@ -113,7 +183,7 @@
 <p><img src="/images/projects/drc_door.jpg" width="295">
 <img src="/images/projects/door_task_panel.png" width="450"></p>
 
-<h2>Intelligent Portable Aerial Surveillance System – IPASS, WPI 12/2012-05/2013</h2>
+<h4>Intelligent Portable Aerial Surveillance System – IPASS, WPI 12/2012-05/2013</h4>
 
 <ul>
 <li>Developed the dynamics model of the aircraft and simulated its control in   Matlab</li>
@@ -124,7 +194,7 @@
 <p><img src="/images/projects/basic_model_02.jpg" width="367">
 <img src="/images/projects/Picture1.jpg" width="365"></p>
 
-<h2>Autonomous Flight Control of a Quadrotor, WPI 02/2012-12/2012</h2>
+<h4>Autonomous Flight Control of a Quadrotor, WPI 02/2012-12/2012</h4>
 
 <ul>
 <li>Studied the kinematics and dynamics model of the aircraft</li>
@@ -137,7 +207,7 @@
 <p><img src="/images/projects/autonomous_quadrotor.png" width="390">
 <img src="/images/projects/humming_bird.JPG" width="340"></p>
 
-<h2>3D Visualization and Representation of a Simulated Robot, WPI 02/2012-08/2012</h2>
+<h4>3D Visualization and Representation of a Simulated Robot, WPI 02/2012-08/2012</h4>
 
 <ul>
 <li>Developed the kinematics for the MRI Neurosurgery Robot</li>
@@ -150,7 +220,7 @@
 <p><img src="/images/projects/vtk.png" width="390">
 <img src="/images/projects/vtk_robot.jpg" width="365"></p>
 
-<h2>Undergraduate Graduation Project: Quadrotor Flight Attitude Control, 10/2010-06/2011</h2>
+<h4>Undergraduate Graduation Project: Quadrotor Flight Attitude Control, 10/2010-06/2011</h4>
 
 <ul>
 <li>Wrote drivers using C for S12XEP100 MCU, including ATD, TIMER, PIT, SCI, SPI, IIC modules</li>
@@ -162,7 +232,7 @@
 <p><img src="/images/projects/02_quadrotor.JPG" width="335">
 <img src="/images/projects/02_Sensor_Monitor.JPG" width="410"></p>
 
-<h2>National Undergraduate Innovative Project: Model Car Path Identification and Trajectory Tracking Algorithm Research, 10/2009-06/2010</h2>
+<h4>National Undergraduate Innovative Project: Model Car Path Identification and Trajectory Tracking Algorithm Research, 10/2009-06/2010</h4>
 
 <ul>
 <li>Designed and implemented the control algorithm for model car with S12XS128</li>
@@ -172,6 +242,32 @@
 
 <p><img src="/images/projects/01_car_model_01.jpg" width="225">
 <img src="/images/projects/labview_car.png" width="525"></p>
+
+<h1><div style="text-align:right;line-height:3px;"><font size="3"><a href="#TOP">Back To Top</a></font></div></h1>
+
+<p><a name="HONORS"></a></p>
+
+<h2>HONORS</h2>
+
+<ul>
+<li>Received Outstanding Graduate Award of Hebei Province, NCEPU, China, 2011</li>
+<li>Awarded academic scholarship each year, NCEPU, 2007-2010</li>
+<li>Earned the 2nd and 3rd prize in the 5th and 4th Freescale Cup Intelligent Car Racing Contest, 2009-2010</li>
+</ul>
+
+
+<p><a name="ACTIVITIES"></a></p>
+
+<h2>ACTIVITIES</h2>
+
+<ul>
+<li>Member, Rho Beta Epsilon robotics honors fraternity, WPI, 02/2013-Present</li>
+<li>Head of Technology Committee, NCEPU Network Management Association, NCEPU, 09/2009-09/2010</li>
+<li>Vice-president, Science Association of the Department of Automation, NCEPU, 09/2009-09/2010</li>
+</ul>
+
+
+<h1><div style="text-align:right;line-height:3px;"><font size="3"><a href="#TOP">Back To Top</a></font></div></h1>
 
   
     <footer>
