--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ruixiang Du">
 
   
-  <meta name="description" content="Currently I am a PhD student in Robotics Engineering at Worcester Polytechnic Institute (WPI). I received my Master&rsquo;s degree from WPI in May, &hellip;">
+  <meta name="description" content="I am a PhD student in Robotics Engineering at Worcester Polytechnic Institute (WPI). I received my Master&rsquo;s degree from WPI in May, 2013 and &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://rxdu.me">
+  <link rel="canonical" href="http://rdu.im">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Ruixiang Du" type="application/atom+xml">
@@ -63,15 +63,16 @@
   
 <form action="http://google.com/search" method="get">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:rxdu.me" />
+    <input type="hidden" name="q" value="site:rdu.im" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
   
 <ul class="main-navigation">
   <li><a href="/">About Me</a></li>
+  <li><a href="/resume">Resume</a></li>  
   <li><a href="/research">Research</a></li>
-  <li><a href="/projects">Projects</a></li>  
+  <li><a href="/devel">Devel Zone</a></li>
   <li><a href="/blog">Tech Notes</a></li>
   <li><a href="/category-list">Categories</a></li>  
 </ul>
@@ -82,9 +83,8 @@
       <div>
 <article role="article">
   
-  <p><img class="left" src="/images/about-me/profile.JPG" width="256"></p>
-
-<p>Currently I am a PhD student in Robotics Engineering at Worcester Polytechnic Institute (WPI). I received my Master&rsquo;s degree from WPI in May, 2013 and formally joined in Robotics and Intelligent Vehicles Research Laboratory (<a href="http://robot.wpi.edu">RIVeR Lab</a>) as a PhD student later in June. My areas of interest include mobile manipulation, human-in-the-loop control of assistive robots and human-robot interaction. My advisor is Professor <a href="http://tpadir.weebly.com/">Taskin Padir</a>.</p>
+  <p><img class="left" src="/images/about-me/profile.JPG" width="256">
+I am a PhD student in Robotics Engineering at Worcester Polytechnic Institute (<a href="http://www.wpi.edu/">WPI</a>). I received my Master&rsquo;s degree from WPI in May, 2013 and joined in Robotics and Intelligent Vehicles Research Laboratory (<a href="http://robot.wpi.edu">RIVeR Lab</a>) as a PhD student later in June. My advisor is Professor <a href="http://tpadir.weebly.com/">Taskin Padir</a>. I&rsquo;m interested in robotics, real-time and embedded systems. My research focus is the control and navigation of mobile robots in cluttered environments. I&rsquo;m also an active member of <a href="http://robot.wpi.edu/drc/">Team WPI-CMU</a> for the <a href="http://www.theroboticschallenge.org/">DARPA Robotics Challenge</a>.</p>
 
   
     <footer>
